# pixel_art_games

./: Cargo.toml
src/: art.rs  camera.rs  game.rs  graph.rs  grid.rs  input.rs  main.rs  menu.rs  mesh_generation.rs  ordering.rs  prefabs.rs  side.rs
src/game/: appear_test.rs  cart.rs  pixel.rs
src/game/pixel/: next_pixel.rs
src/ordering/: lines.rs  orderings.rs
src/ordering/orderings/: default.rs  side_to_side.rs
