[package]
name = "pixel_art_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", version = "0.2.0" }
bevy_egui = "0.19.0"
image = "0.24.5"
iyes_loopless = "0.9.1"
