[package]
name = "pixel_art_games"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.19.0"
ezing = "0.2.1"
futures-lite = "1.12.0"
image = "0.24.5"
iyes_loopless = "0.9.1"
